약국. 로그아웃 기능/ 상태 버튼 드랍다운
약국. 로그아웃 기능/ 상태 버튼 드랍다운

--- a/pharmacy.html
+++ b/pharmacy.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/pharmacy/topbar.css">
     <link rel="stylesheet" href="css/pharmacy/common.css">
     <link rel="stylesheet" href="css/pharmacy/pharmacy.css">
-    <script src="js/pharmacy/menu_p.js"></script>
+    <script type="module" src="js/pharmacy/pharmacy_menu.js"></script>
 </head>
 <style>
  body {
