병원 처방 기록 쪽수 표 시 / 약국 버튼 수정
병원 처방 기록 쪽수 표 시 / 약국 버튼 수정

--- a/hospital.html
+++ b/hospital.html
@@ -191,9 +191,9 @@
                 <img src="image/home.png" alt="Home" class="menu-icon menu-icon-active">
                 Home
             </div>
-            <div class="menu-item">
-                <img src="image/desk_black.png" alt="Desk" class="menu-icon menu-icon-default">
-                <img src="image/desk.png" alt="Desk" class="menu-icon menu-icon-active">
+            <div class="menu-item menu-item-desk" id="desk-menu">
+                <img src="image/desk_black.png" alt="desk" class="menu-icon menu-icon-default">
+                <img src="image/desk.png" alt="desk" class="menu-icon menu-icon-active">
                 Desk
             </div>
             <div class="menu-item">
@@ -206,9 +206,9 @@
                 <img src="image/reservation.png" alt="Reservation" class="menu-icon menu-icon-active">
                 Reservation
             </div>
-            <div class="menu-item">
-                <img src="image/data_black.png" alt="Data" class="menu-icon menu-icon-default">
-                <img src="image/data.png" alt="Data" class="menu-icon menu-icon-active">
+            <div class="menu-item menu-item-data" id="data-menu">
+                <img src="image/data_black.png" alt="data" class="menu-icon menu-icon-default">
+                <img src="image/data.png" alt="data" class="menu-icon menu-icon-active">
                 Data
             </div>
         </div>
