--- a/pharmacy.html
+++ b/pharmacy.html
@@ -17,7 +17,6 @@
             padding: 0;
             height: 100vh;
             font-family: 'Noto Sans KR', sans-serif;  /* 기본 글씨체 설정 */
-     	    background-color: #30E026;
             user-select: none;  /* 텍스트 선택 비활성화 */
             -webkit-user-select: none;  /* Safari용 */
             -moz-user-select: none;  /* Firefox용 */
@@ -33,7 +32,7 @@
         <div class="menu-container">
             <div class="menu-item" id="home-menu">
                 <img src="image/home_black.png" alt="Home" class="menu-icon menu-icon-default">
-                <img src="image/home.png" alt="Home" class="menu-icon menu-icon-active">
+                <img src="image/home_p.png" alt="Home" class="menu-icon menu-icon-active">
                 Home
             </div>
             <div class="menu-item" id="prepare-menu">
@@ -42,9 +41,9 @@
                 Prepare
             </div>   
             
-            <div class="menu-item" id="data-menu">
+            <div class="menu-item menu-item-data" id="data-menu">
                 <img src="image/data_black.png" alt="data" class="menu-icon menu-icon-default">
-                <img src="image/data.png" alt="data" class="menu-icon menu-icon-active">
+                <img src="image/data_p.png" alt="data" class="menu-icon menu-icon-active">
                 Data
             </div> 
 
