inventory 메뉴 추가
inventory 메뉴 추가

--- a/pharmacy.html
+++ b/pharmacy.html
@@ -47,6 +47,12 @@
                 Data
             </div> 
 
+            <div class="menu-item" id="inventory-menu">
+                <img src="image/inventory_black.png" alt="inventory" class="menu-icon menu-icon-default">
+                <img src="image/inventory.png" alt="inventory" class="menu-icon menu-icon-active">
+                Inventory
+            </div>
+
         </div>
     </div>
 
