topbar saarch bar 추가
topbar saarch bar 추가

--- a/pharmacy.html
+++ b/pharmacy.html
@@ -58,6 +58,10 @@
 
     <!-- 상단 메뉴바 (topbar) -->
     <div class="top-bar">
+        <div class="page-title">Medicines</div>
+        <div class="search-form">
+            <input type="text" class="search-input" placeholder="Search">
+        </div>
         <div class="action-buttons">
             <span class="user-email"></span>
             <div class="status-selector">
@@ -86,8 +90,6 @@
     <div class="main-content">
         <!-- Home 컨테이너 추가 -->
         <div id="home-content" class="content-container home-container">
-            <div class="content-header">
-
             </div>
             <div class="content-body">
                 <!-- Home 컨텐츠 내용 -->
@@ -97,6 +99,7 @@
         <!-- Prepare(pharmacy) 컨테이너 -->
         <div id="prepare-content" class="content-container pharmacy-container">
             <div class="content-header">
+                <div class="content-title">Prepare</div>
 
             </div>
             <div class="content-body">
@@ -107,10 +110,20 @@
 
         <div id="data-content" class="content-container data-container">
             <div class="content-header">
+                <div class="content-title">Data</div>
 
             </div>
             <div class="content-body">
           
+            </div>
+        </div>
+
+        <div id="inventory-content" class="content-container inventory-container">
+            <div class="content-header">
+                <div class="content-title">Inventory Management</div>
+            </div>
+            <div class="content-body">
+                <!-- Inventory 컨텐츠 내용 -->
             </div>
         </div>
 
