sidebar2 항목 명칭 변경
sidebar2 항목 명칭 변경

--- a/hospital.html
+++ b/hospital.html
@@ -254,23 +254,23 @@
     <div class="sidebar2">
         <div class="patient-list-title">Treatment progress list</div>
         <div class="submenu-container">
-            <div class="submenu-item active">Waiting</div>
-            <div class="submenu-item">RSVD</div>
-            <div class="submenu-item">Visit</div>
+            <div class="submenu-item active">Examine</div>
+            <div class="submenu-item">Done</div>
+            <div class="submenu-item">Memo</div>
         </div>
 
         <div class="patient-list-container">
             <!-- Room/Desk UI가 여기에 동적으로 추가됨 -->
         </div>
 
-        <!-- RSVD 컨테이너 -->
-        <div class="rsvd-list-container">
-            <!-- RSVD 목록이 여기에 추가될 것임 -->
+        <!-- Done 컨테이너 -->
+        <div class="done-list-container">
+            <!-- Done 목록이 여기에 추가될 것임 -->
         </div>
 
-        <!-- Visit 컨테이너 -->
-        <div class="visit-list-container">
-            <!-- Visit 목록이 여기에 추가될 것임 -->
+        <!-- Memo 컨테이너 -->
+        <div class="memo-list-container">
+            <!-- Memo 목록이 여기에 추가될 것임 -->
         </div>
 
         <div class="bottom-container">
