--- a/hospital.html
+++ b/hospital.html
@@ -178,6 +178,21 @@
             initializePatientView(); // 환자 방문 기록 조회 기능 초기화
 
     </script>
+    <script>
+        // CSS 캐시 무효화 - 페이지 로드 시 실행
+        document.addEventListener('DOMContentLoaded', function() {
+            // 모든 CSS 링크에 대해
+            const cssLinks = document.querySelectorAll('link[rel="stylesheet"]');
+            cssLinks.forEach(link => {
+                // 현재 href 가져오기
+                const currentHref = link.getAttribute('href');
+                // 캐시 방지를 위한 랜덤 쿼리 파라미터 추가
+                const newHref = currentHref + (currentHref.includes('?') ? '&' : '?') + '_=' + new Date().getTime();
+                // 새 href 설정
+                link.setAttribute('href', newHref);
+            });
+        });
+    </script>
 </head>
 <body>
     <div class="sidebar1">
@@ -287,7 +302,7 @@
             <!-- 100% 너비의 메시지 컨테이너 -->
             <div class="patient-select-wrapper">
                 <div class="patient-select-message">
-                    Please select a patient
+                    No patient records found. Please select a patient from the list.
                 </div>
             </div>
 
