스크롤바 색상 / 이미지 첨부 기능
스크롤바 색상 / 이미지 첨부 기능

--- a/hospital.html
+++ b/hospital.html
@@ -296,7 +296,6 @@
         <div id="prescription-content" class="content-container-prescription">
             <div class="content-header-prescription">
                 <div class="content-title-prescription">Prescription</div>
-                <button class="close-button">Close</button>
             </div>
 
             <!-- 100% 너비의 메시지 컨테이너 -->
@@ -328,6 +327,14 @@
                     </div>
                          <!-- 오른쪽 컨테이너 (4번) -->
                          <div class="content-body-prescription2">
+                            <div class="prescription-right-top-area">
+                                <div class="prescription-section-title">Image</div>
+                                <button class="attach-image-btn"></button>
+                            </div>
+                            <div class="prescription-right-bottom-area">
+                                <div class="prescription-section-title">Order set</div>
+                                <input type="text" class="order-set-search-input" placeholder="Search order set">
+                            </div>
                         </div>
                 </div>
             </div>
@@ -640,12 +647,7 @@
             </div>
         </div>
 
-        <div id="pharmacy-content" class="content-container pharmacy-container">
-            <div class="content-header">
-                <div class="content-title">Pharmacy</div>
-                <button class="close-button">Close</button>
-            </div>
-        </div>
+
 
         <!-- Home 컨테이너 추가 -->
         <div id="home-content" class="content-container">
