--- a/hospital.html
+++ b/hospital.html
@@ -323,6 +323,7 @@
                         </div>
                         <div class="prescription-center-bottom">
                             <div class="prescription-section-title">Diagnosis & Prescription</div>
+                            <button class="prescription-favorite-btn" title="Add to favorites"></button>
                         </div>
                     </div>
                          <!-- 오른쪽 컨테이너 (4번) -->
