reservation UI 수정
reservation UI 수정

--- a/hospital.html
+++ b/hospital.html
@@ -628,33 +628,38 @@
                 <button class="close-button">Close</button>
             </div>
             <div class="reservation-form">
-                <div class="custom-calendar">
-                    <div class="calendar-header">
-                        <div class="calendar-nav">
-                            <button id="prevMonth">&lt; Prev</button>
-                        </div>
-                        <div class="month-year"></div>
-                        <div class="calendar-nav">
-                            <button id="nextMonth">Next &gt;</button>
-                        </div>
-                    </div>
-                    <div class="calendar-grid">
-                        <div class="weekday">Sun</div>
-                        <div class="weekday">Mon</div>
-                        <div class="weekday">Tue</div>
-                        <div class="weekday">Wed</div>
-                        <div class="weekday">Thu</div>
-                        <div class="weekday">Fri</div>
-                        <div class="weekday">Sat</div>
-                    </div>
+                <div class="info-container">
+                    <!-- 여기에 필요한 정보를 표시할 내용 추가 -->
                 </div>
-                
-                <div class="daily-scheduler">
-                    <div class="scheduler-header">
-                        <span class="current-date"></span>
+                <div class="calendar-scheduler-container">
+                    <div class="custom-calendar">
+                        <div class="calendar-header">
+                            <div class="calendar-nav">
+                                <button id="prevMonth">&lt; Prev</button>
+                            </div>
+                            <div class="month-year"></div>
+                            <div class="calendar-nav">
+                                <button id="nextMonth">Next &gt;</button>
+                            </div>
+                        </div>
+                        <div class="calendar-grid">
+                            <div class="weekday">Sun</div>
+                            <div class="weekday">Mon</div>
+                            <div class="weekday">Tue</div>
+                            <div class="weekday">Wed</div>
+                            <div class="weekday">Thu</div>
+                            <div class="weekday">Fri</div>
+                            <div class="weekday">Sat</div>
+                        </div>
                     </div>
-                    <div class="time-grid">
-                        <!-- 시간대별 행 (JS로 동적 생성) -->
+                    
+                    <div class="daily-scheduler">
+                        <div class="scheduler-header">
+                            <span class="current-date"></span>
+                        </div>
+                        <div class="time-grid">
+                            <!-- 시간대별 행 (JS로 동적 생성) -->
+                        </div>
                     </div>
                 </div>
             </div>
