토스트 생성
토스트 생성

--- a/hospital.html
+++ b/hospital.html
@@ -19,11 +19,22 @@
     <link rel="stylesheet" href="css/hospital/prescription-payment.css">
     <link rel="stylesheet" href="css/hospital/data-menu.css">
     <link rel="stylesheet" href="css/hospital/qrcode.css">
+    <link rel="stylesheet" href="css/hospital/toast.css">
 
     <!-- D3.js 라이브러리 추가 -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- QR Code Styling 라이브러리 추가 -->
     <script type="text/javascript" src="https://unpkg.com/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
+
+    <!-- Include JavaScript files -->
+    <script src="js/firebase-config.js" type="module"></script>
+    <script src="js/auth.js" type="module"></script>
+    <script src="js/hospital/hospital-main.js" type="module"></script>
+    <script src="js/hospital/patient-list.js" type="module"></script>
+    <script src="js/hospital/treatment.js" type="module"></script>
+    <script src="js/hospital/prescription.js" type="module"></script>
+    <script src="js/hospital/calendar.js" type="module"></script>
+    <script src="js/hospital/toast.js" type="module"></script>
 </head>
     <style>
         body {
