이미지 추가 버튼 활성화 로직 수정
이미지 추가 버튼 활성화 로직 수정

--- a/hospital.html
+++ b/hospital.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/hospital/data-menu.css">
     <link rel="stylesheet" href="css/hospital/qrcode.css">
     <link rel="stylesheet" href="css/hospital/toast.css">
+    <link rel="stylesheet" href="css/hospital/popup.css">
 
     <!-- D3.js 라이브러리 추가 -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -35,6 +36,7 @@
     <script src="js/hospital/prescription.js" type="module"></script>
     <script src="js/hospital/calendar.js" type="module"></script>
     <script src="js/hospital/toast.js" type="module"></script>
+    <script src="js/hospital/popup.js" type="module"></script>
 </head>
     <style>
         body {
