--- a/hospital.html
+++ b/hospital.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/hospital/qrcode.css">
     <link rel="stylesheet" href="css/hospital/toast.css">
     <link rel="stylesheet" href="css/hospital/popup.css">
+    <link rel="stylesheet" href="css/hospital/pay.css">
 
     <!-- D3.js 라이브러리 추가 -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -37,6 +38,7 @@
     <script src="js/hospital/calendar.js" type="module"></script>
     <script src="js/hospital/toast.js" type="module"></script>
     <script src="js/hospital/popup.js" type="module"></script>
+    <script src="js/hospital/pay.js" type="module"></script>
 </head>
     <style>
         body {
